// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UrlFormatEditor should render label template help 1`] = `
<Fragment>
  <InjectIntl(LabelTemplateFlyout)
    isVisible={true}
    onClose={[Function]}
  />
  <InjectIntl(UrlTemplateFlyout)
    isVisible={false}
    onClose={[Function]}
  />
  <EuiFormRow
    describedByIds={Array []}
    display="row"
    fullWidth={false}
    hasEmptyLabelSpace={false}
    label={
      <FormattedMessage
        defaultMessage="Type"
        id="common.ui.fieldEditor.url.typeLabel"
        values={Object {}}
      />
    }
    labelType="label"
  >
    <EuiSelect
      compressed={false}
      data-test-subj="urlEditorType"
      fullWidth={false}
      hasNoInitialSelection={false}
      isLoading={false}
      onChange={[Function]}
      options={
        Array [
          Object {
            "text": "Link",
            "value": "a",
          },
          Object {
            "text": "Image",
            "value": "img",
          },
          Object {
            "text": "Audio",
            "value": "audio",
          },
        ]
      }
    />
  </EuiFormRow>
  <EuiFormRow
    describedByIds={Array []}
    display="row"
    error={null}
    fullWidth={false}
    hasEmptyLabelSpace={false}
    helpText={
      <EuiLink
        color="primary"
        onClick={[Function]}
        type="button"
      >
        <FormattedMessage
          defaultMessage="URL template help"
          id="common.ui.fieldEditor.url.template.helpLinkText"
          values={Object {}}
        />
      </EuiLink>
    }
    isInvalid={false}
    label={
      <FormattedMessage
        defaultMessage="URL template"
        id="common.ui.fieldEditor.url.urlTemplateLabel"
        values={Object {}}
      />
    }
    labelType="label"
  >
    <EuiFieldText
      compressed={false}
      data-test-subj="urlEditorUrlTemplate"
      fullWidth={false}
      isLoading={false}
      onChange={[Function]}
      value=""
    />
  </EuiFormRow>
  <EuiFormRow
    describedByIds={Array []}
    display="row"
    error={null}
    fullWidth={false}
    hasEmptyLabelSpace={false}
    helpText={
      <EuiLink
        color="primary"
        onClick={[Function]}
        type="button"
      >
        <FormattedMessage
          defaultMessage="Label template help"
          id="common.ui.fieldEditor.url.labelTemplateHelpText"
          values={Object {}}
        />
      </EuiLink>
    }
    isInvalid={false}
    label={
      <FormattedMessage
        defaultMessage="Label template"
        id="common.ui.fieldEditor.url.labelTemplateLabel"
        values={Object {}}
      />
    }
    labelType="label"
  >
    <EuiFieldText
      compressed={false}
      data-test-subj="urlEditorLabelTemplate"
      fullWidth={false}
      isLoading={false}
      onChange={[Function]}
      value=""
    />
  </EuiFormRow>
  <InjectIntl(FormatEditorSamplesComponent)
    samples={Array []}
  />
</Fragment>
`;

exports[`UrlFormatEditor should render normally 1`] = `
<Fragment>
  <InjectIntl(LabelTemplateFlyout)
    isVisible={false}
    onClose={[Function]}
  />
  <InjectIntl(UrlTemplateFlyout)
    isVisible={false}
    onClose={[Function]}
  />
  <EuiFormRow
    describedByIds={Array []}
    display="row"
    fullWidth={false}
    hasEmptyLabelSpace={false}
    label={
      <FormattedMessage
        defaultMessage="Type"
        id="common.ui.fieldEditor.url.typeLabel"
        values={Object {}}
      />
    }
    labelType="label"
  >
    <EuiSelect
      compressed={false}
      data-test-subj="urlEditorType"
      fullWidth={false}
      hasNoInitialSelection={false}
      isLoading={false}
      onChange={[Function]}
      options={
        Array [
          Object {
            "text": "Link",
            "value": "a",
          },
          Object {
            "text": "Image",
            "value": "img",
          },
          Object {
            "text": "Audio",
            "value": "audio",
          },
        ]
      }
    />
  </EuiFormRow>
  <EuiFormRow
    describedByIds={Array []}
    display="row"
    error={null}
    fullWidth={false}
    hasEmptyLabelSpace={false}
    helpText={
      <EuiLink
        color="primary"
        onClick={[Function]}
        type="button"
      >
        <FormattedMessage
          defaultMessage="URL template help"
          id="common.ui.fieldEditor.url.template.helpLinkText"
          values={Object {}}
        />
      </EuiLink>
    }
    isInvalid={false}
    label={
      <FormattedMessage
        defaultMessage="URL template"
        id="common.ui.fieldEditor.url.urlTemplateLabel"
        values={Object {}}
      />
    }
    labelType="label"
  >
    <EuiFieldText
      compressed={false}
      data-test-subj="urlEditorUrlTemplate"
      fullWidth={false}
      isLoading={false}
      onChange={[Function]}
      value=""
    />
  </EuiFormRow>
  <EuiFormRow
    describedByIds={Array []}
    display="row"
    error={null}
    fullWidth={false}
    hasEmptyLabelSpace={false}
    helpText={
      <EuiLink
        color="primary"
        onClick={[Function]}
        type="button"
      >
        <FormattedMessage
          defaultMessage="Label template help"
          id="common.ui.fieldEditor.url.labelTemplateHelpText"
          values={Object {}}
        />
      </EuiLink>
    }
    isInvalid={false}
    label={
      <FormattedMessage
        defaultMessage="Label template"
        id="common.ui.fieldEditor.url.labelTemplateLabel"
        values={Object {}}
      />
    }
    labelType="label"
  >
    <EuiFieldText
      compressed={false}
      data-test-subj="urlEditorLabelTemplate"
      fullWidth={false}
      isLoading={false}
      onChange={[Function]}
      value=""
    />
  </EuiFormRow>
  <InjectIntl(FormatEditorSamplesComponent)
    samples={Array []}
  />
</Fragment>
`;

exports[`UrlFormatEditor should render url template help 1`] = `
<Fragment>
  <InjectIntl(LabelTemplateFlyout)
    isVisible={false}
    onClose={[Function]}
  />
  <InjectIntl(UrlTemplateFlyout)
    isVisible={true}
    onClose={[Function]}
  />
  <EuiFormRow
    describedByIds={Array []}
    display="row"
    fullWidth={false}
    hasEmptyLabelSpace={false}
    label={
      <FormattedMessage
        defaultMessage="Type"
        id="common.ui.fieldEditor.url.typeLabel"
        values={Object {}}
      />
    }
    labelType="label"
  >
    <EuiSelect
      compressed={false}
      data-test-subj="urlEditorType"
      fullWidth={false}
      hasNoInitialSelection={false}
      isLoading={false}
      onChange={[Function]}
      options={
        Array [
          Object {
            "text": "Link",
            "value": "a",
          },
          Object {
            "text": "Image",
            "value": "img",
          },
          Object {
            "text": "Audio",
            "value": "audio",
          },
        ]
      }
    />
  </EuiFormRow>
  <EuiFormRow
    describedByIds={Array []}
    display="row"
    error={null}
    fullWidth={false}
    hasEmptyLabelSpace={false}
    helpText={
      <EuiLink
        color="primary"
        onClick={[Function]}
        type="button"
      >
        <FormattedMessage
          defaultMessage="URL template help"
          id="common.ui.fieldEditor.url.template.helpLinkText"
          values={Object {}}
        />
      </EuiLink>
    }
    isInvalid={false}
    label={
      <FormattedMessage
        defaultMessage="URL template"
        id="common.ui.fieldEditor.url.urlTemplateLabel"
        values={Object {}}
      />
    }
    labelType="label"
  >
    <EuiFieldText
      compressed={false}
      data-test-subj="urlEditorUrlTemplate"
      fullWidth={false}
      isLoading={false}
      onChange={[Function]}
      value=""
    />
  </EuiFormRow>
  <EuiFormRow
    describedByIds={Array []}
    display="row"
    error={null}
    fullWidth={false}
    hasEmptyLabelSpace={false}
    helpText={
      <EuiLink
        color="primary"
        onClick={[Function]}
        type="button"
      >
        <FormattedMessage
          defaultMessage="Label template help"
          id="common.ui.fieldEditor.url.labelTemplateHelpText"
          values={Object {}}
        />
      </EuiLink>
    }
    isInvalid={false}
    label={
      <FormattedMessage
        defaultMessage="Label template"
        id="common.ui.fieldEditor.url.labelTemplateLabel"
        values={Object {}}
      />
    }
    labelType="label"
  >
    <EuiFieldText
      compressed={false}
      data-test-subj="urlEditorLabelTemplate"
      fullWidth={false}
      isLoading={false}
      onChange={[Function]}
      value=""
    />
  </EuiFormRow>
  <InjectIntl(FormatEditorSamplesComponent)
    samples={Array []}
  />
</Fragment>
`;

exports[`UrlFormatEditor should render width and height fields if image 1`] = `
<Fragment>
  <InjectIntl(LabelTemplateFlyout)
    isVisible={false}
    onClose={[Function]}
  />
  <InjectIntl(UrlTemplateFlyout)
    isVisible={false}
    onClose={[Function]}
  />
  <EuiFormRow
    describedByIds={Array []}
    display="row"
    fullWidth={false}
    hasEmptyLabelSpace={false}
    label={
      <FormattedMessage
        defaultMessage="Type"
        id="common.ui.fieldEditor.url.typeLabel"
        values={Object {}}
      />
    }
    labelType="label"
  >
    <EuiSelect
      compressed={false}
      data-test-subj="urlEditorType"
      fullWidth={false}
      hasNoInitialSelection={false}
      isLoading={false}
      onChange={[Function]}
      options={
        Array [
          Object {
            "text": "Link",
            "value": "a",
          },
          Object {
            "text": "Image",
            "value": "img",
          },
          Object {
            "text": "Audio",
            "value": "audio",
          },
        ]
      }
      value="img"
    />
  </EuiFormRow>
  <EuiFormRow
    describedByIds={Array []}
    display="row"
    error={null}
    fullWidth={false}
    hasEmptyLabelSpace={false}
    helpText={
      <EuiLink
        color="primary"
        onClick={[Function]}
        type="button"
      >
        <FormattedMessage
          defaultMessage="URL template help"
          id="common.ui.fieldEditor.url.template.helpLinkText"
          values={Object {}}
        />
      </EuiLink>
    }
    isInvalid={false}
    label={
      <FormattedMessage
        defaultMessage="URL template"
        id="common.ui.fieldEditor.url.urlTemplateLabel"
        values={Object {}}
      />
    }
    labelType="label"
  >
    <EuiFieldText
      compressed={false}
      data-test-subj="urlEditorUrlTemplate"
      fullWidth={false}
      isLoading={false}
      onChange={[Function]}
      value=""
    />
  </EuiFormRow>
  <EuiFormRow
    describedByIds={Array []}
    display="row"
    error={null}
    fullWidth={false}
    hasEmptyLabelSpace={false}
    helpText={
      <EuiLink
        color="primary"
        onClick={[Function]}
        type="button"
      >
        <FormattedMessage
          defaultMessage="Label template help"
          id="common.ui.fieldEditor.url.labelTemplateHelpText"
          values={Object {}}
        />
      </EuiLink>
    }
    isInvalid={false}
    label={
      <FormattedMessage
        defaultMessage="Label template"
        id="common.ui.fieldEditor.url.labelTemplateLabel"
        values={Object {}}
      />
    }
    labelType="label"
  >
    <EuiFieldText
      compressed={false}
      data-test-subj="urlEditorLabelTemplate"
      fullWidth={false}
      isLoading={false}
      onChange={[Function]}
      value=""
    />
  </EuiFormRow>
  <EuiFormRow
    describedByIds={Array []}
    display="row"
    error={null}
    fullWidth={false}
    hasEmptyLabelSpace={false}
    isInvalid={false}
    label={
      <FormattedMessage
        defaultMessage="Width"
        id="common.ui.fieldEditor.url.widthLabel"
        values={Object {}}
      />
    }
    labelType="label"
  >
    <EuiFieldNumber
      compressed={false}
      data-test-subj="urlEditorWidth"
      fullWidth={false}
      isLoading={false}
      onChange={[Function]}
      placeholder={128}
      value=""
    />
  </EuiFormRow>
  <EuiFormRow
    describedByIds={Array []}
    display="row"
    error={null}
    fullWidth={false}
    hasEmptyLabelSpace={false}
    isInvalid={false}
    label={
      <FormattedMessage
        defaultMessage="Height"
        id="common.ui.fieldEditor.url.heightLabel"
        values={Object {}}
      />
    }
    labelType="label"
  >
    <EuiFieldNumber
      compressed={false}
      data-test-subj="urlEditorHeight"
      fullWidth={false}
      isLoading={false}
      onChange={[Function]}
      placeholder={128}
      value=""
    />
  </EuiFormRow>
  <InjectIntl(FormatEditorSamplesComponent)
    samples={
      Array [
        Object {
          "input": "go",
          "output": "converted url for go",
        },
        Object {
          "input": "stop",
          "output": "converted url for stop",
        },
        Object {
          "input": Array [
            "de",
            "ne",
            "us",
            "ni",
          ],
          "output": "converted url for de,ne,us,ni",
        },
        Object {
          "input": "cv",
          "output": "converted url for cv",
        },
      ]
    }
  />
</Fragment>
`;
